
add_executable(EventLoop_test EventLoop_test.cpp)
target_link_libraries(EventLoop_test muduo_net)

add_executable(EventLoop_test1 EventLoop_test1.cpp)
target_link_libraries(EventLoop_test1 muduo_net)

add_executable(Reactor_test Reactor_test.cpp)
target_link_libraries(Reactor_test muduo_net)

add_executable(EventLoopThread_test EventLoopThread_test.cpp)
target_link_libraries(EventLoopThread_test muduo_net)

add_executable(Acceptor_test Acceptor_test.cpp)
target_link_libraries(Acceptor_test muduo_net)

add_executable(TcpServer_test TcpServer_test.cpp)
target_link_libraries(TcpServer_test muduo_net)